Made couple of changes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/macbook.png" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="width=1024, user-scalable=no">
-    <title>Mahendra's Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <!-- 
+      CORRECT VIEWPORT SETTING:
+      Use 'width=device-width' to ensure Tailwind's mobile breakpoints (max-sm) work correctly.
+      Do NOT use width=1024, as it disables mobile responsiveness and shrinks buttons.
+    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <title>Portfolio OS</title>
   </head>
   <body>
     <div id="root"></div>
