--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    
-    <!-- 
-      CORRECT VIEWPORT SETTING:
-      Use 'width=device-width' to ensure Tailwind's mobile breakpoints (max-sm) work correctly.
-      Do NOT use width=1024, as it disables mobile responsiveness and shrinks buttons.
-    -->
+    <link rel="icon" type="image/svg+xml" href="/macbook.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Portfolio OS</title>
