--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/macbook.png" />
     <meta name="viewport" content="width=1024" />
     
-    <title>Portfolio OS</title>
+    <title>Mahendra'a Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
